arrey and methods

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+
+	<div class="wrap">
+		<h2 id="head">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+
+		<div class="background" id="result"></div>
+	</div>
+
 	<div class="content">
 		<button id="button">Color Text</button>
 		<button id="button2">Color Block</button>
@@ -16,7 +23,7 @@
 		<button id="button5">H1 In Text</button>
 		<button id="button6">Delete</button>
 		<div id="test">
-			<h1>Jaerbi  World!</h1>
+			<h1>Jaerbi  World!!!</h1>
 			<form id="myForm">
 				<label>Name: 
 					<input type="text" placeholder="Name" name="name">
@@ -64,8 +71,7 @@
 		</div>
 			
 		</div>
-		
-
+	
 	<!-- Content END -->
 	</div>
 	
