--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>			
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -9,10 +9,35 @@
 
 <body>
 
+	<input type="text" id="nameaaa">
+	<p id="resNametext"></p>
+	<button id="addEvent_test">Tфest Add Event Listener</button>
+
+	<div id="popup">
+		<div class="popup_wrap">
+			<div class="popup">
+			<h3>BLOCK POPUP</h3>
+			<p>Lorem ipsum dolor sit amet.</p>
+			<button id="popupBtn">Close</button>
+		</div>
+		</div>
+	</div>
+
 	<div class="wrap">
-		<h2 id="head">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+		<div id="strTextHead">
+			<h2 class="headBlock">Just Type some text from my Head</h2>
+		</div>
+		<button id="changeColor">Change Color</button>
+		<div class="background" id="strTextContent"></div>
+		<button id="popupGo">Open</button>
+		<div class="background" id="strPopup">BLA BLA</div>
+	</div>
+
+	<div class="wrap">
+		<h2 id="head">Lorem! ipsum dolor sit amet, consectetur adipisicing elit.</h2>
 
 		<div class="background" id="result"></div>
+		<div class="background" id="resultObj"></div>
 	</div>
 
 	<div class="content">
@@ -23,7 +48,7 @@
 		<button id="button5">H1 In Text</button>
 		<button id="button6">Delete</button>
 		<div id="test">
-			<h1>Jaerbi  World!!!</h1>
+			<h1>Jaerbi  World!</h1>
 			<form id="myForm">
 				<label>Name: 
 					<input type="text" placeholder="Name" name="name">
